<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itemOptionsConta"
        android:title="@string/menu1"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/itemOptionsConfig"
        android:title="@string/menu2"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/itemOptionsLogout"
        android:title="@string/menu3"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/itemOptionsCadastrar"
        android:title="@string/menu4"
        android:icon="@drawable/ic_menu_add_white"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/itemOptionsAtualizar"
        android:title="@string/menu5"
        android:icon="@drawable/ic_menu_refresh_white"
        app:showAsAction="ifRoom"
        />
</menu>