<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/whitTextButton">

    <br.ufc.dc.es.meumedico.controller.others.MyMainTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cad_atividade_nome"
        android:textColor="@color/nightBlack" />

    <br.ufc.dc.es.meumedico.controller.others.MyCustomEditText
        android:textColor="@color/nightBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AtNome" />

    <br.ufc.dc.es.meumedico.controller.others.MyMainTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cad_atividade_descricao"
        android:textColor="@color/nightBlack" />

    <br.ufc.dc.es.meumedico.controller.others.MyCustomEditText
        android:textColor="@color/nightBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AtDescricao" />

    <br.ufc.dc.es.meumedico.controller.others.MyMainTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cad_atividade_data"
        android:textColor="@color/nightBlack" />

    <br.ufc.dc.es.meumedico.controller.others.MyCustomEditText
        android:textColor="@color/nightBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AtData"
        android:onClick="showDatePickerDialog"
        android:focusable="false"/>

    <br.ufc.dc.es.meumedico.controller.others.MyMainTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cad_atividade_hora"
        android:textColor="@color/nightBlack" />

    <br.ufc.dc.es.meumedico.controller.others.MyCustomEditText
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AtHora"
        android:onClick="showTimePickerDialog"
        android:focusable="false"/>

    <br.ufc.dc.es.meumedico.controller.others.MyCustomButton
        android:textColor="@color/whitTextButton"
        android:background="@color/emeraldGreen"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/cad_atividade_btSalvar"
        android:id="@+id/AtSalvar"
        android:layout_gravity="center_horizontal" />

</LinearLayout>