<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wihteBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.ContaActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/contaInputUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/conta_nome"
        android:textColorHint="@color/emeraldGreen"
        android:layout_marginTop="70dp">
        <br.ufc.dc.es.meumedico.controller.others.MyCustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/CadastroNome"
            android:textColor="@color/nightBlack"
            android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/contaInputUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/conta_email"
        android:textColorHint="@color/emeraldGreen"
        android:layout_below="@+id/contaInputUserName">
        <br.ufc.dc.es.meumedico.controller.others.MyCustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/CadastroEmail"
            android:textColor="@color/nightBlack"
            android:layout_alignParentStart="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/contaInputUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/conta_senha"
        android:textColorHint="@color/emeraldGreen"
        android:layout_below="@+id/contaInputUserEmail">
        <br.ufc.dc.es.meumedico.controller.others.MyCustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/CadastroSenha"
            android:layout_below="@+id/inputLayoutUserEmail"
            android:layout_alignParentStart="true"
            android:textColor="@color/nightBlack"
            android:inputType="textPassword"
            android:layout_alignEnd="@+id/inputLayoutUseremail" />
    </android.support.design.widget.TextInputLayout>

    <br.ufc.dc.es.meumedico.controller.others.MyCustomButton
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/conta_btCriarConta"
        android:id="@+id/btcriarConta"
        android:layout_below="@+id/contaInputUserPassword"
        android:textColor="@color/whitTextButton"
        android:background="@color/emeraldGreen"/>

</RelativeLayout>
